@@ -3610,7 +3610,7 @@ module Asciidoctor
 
           canvas do
             bounding_box [trim_styles[:content_left][side], trim_styles[:top][side]], width: trim_styles[:content_width][side], height: trim_styles[:height] do
-              theme_font periphery do
+              theme_font_cascade [periphery, %(#{periphery}_#{side})] do
                 if trim_styles[:column_rule_color] && (trim_column_rule_width = trim_styles[:column_rule_width]) > 0
                   trim_column_rule_spacing = trim_styles[:column_rule_spacing]
                 else
